# VulkanVoxelEngine

./: CMakeLists.txt  CMakePresets.json  README.md  run_output.txt
docs/: 3d_cube_pseudocode.txt  Beginner_Vulkan_Guide.md
scripts/: terrain.lua
shaders/: shadow.vert.spv  voxel.frag.spv  voxel.vert.spv
src/: Camera.cpp  Camera.hpp  InputController.cpp  InputController.hpp  LuaTerrainScriptBridge.hpp  RenderLoop.cpp  RenderLoop.hpp  TerrainControlWindow.cpp  TerrainControlWindow.hpp  VulkanApp.cpp  VulkanApp.hpp  World.cpp  World.hpp  main.cpp
src/engine/: VulkanEngine.cpp  VulkanEngine.h  Window.cpp  Window.h
src/shaders/: shadow.vert  voxel.frag  voxel.vert
